--- a/src/app/page/component/content-button/content-button.component.html
+++ b/src/app/page/component/content-button/content-button.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="ready">
+<ng-container *ngIf="ready && !isHidden">
   <div class="mw568 buttonContent tc" dir="{{ dir$ | async }}">
     <a
       *ngIf="type === 'url'"
