--- a/src/app/page/component/content-animation/content-animation.component.html
+++ b/src/app/page/component/content-animation/content-animation.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="ready && anmResource">
+<ng-container *ngIf="ready && !isHidden && anmResource">
   <div class="animation-container">
     <ng-lottie
       (click)="onAnimationClick()"
