--- a/src/app/page/component/content-tabs/content-tabs.component.html
+++ b/src/app/page/component/content-tabs/content-tabs.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="ready && content && (isModal$ | async) === false">
+<ng-container *ngIf="ready && !isHidden && content && (isModal$ | async) === false">
   <ng-container *ngFor="let tab of content; trackBy: trackByFn">
     <ng-container *ngIf="tab.tab && tab.contents">
       <div class="tabContent">
