--- a/src/app/page/component/content-text/content-text.component.html
+++ b/src/app/page/component/content-text/content-text.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="ready">
+<ng-container *ngIf="ready && !isHidden">
   <!-- Add back whe text is formatted [ngStyle]="{ color: textColor }" -->
   <p
     class="mw568 textContent"
