--- a/src/app/page/component/content-video/content-video.component.html
+++ b/src/app/page/component/content-video/content-video.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="ready">
+<ng-container *ngIf="ready && !isHidden">
   <!-- YouTube Video Embed -->
   <div class="video-embed">
     <iframe [src]="videoUrl" frameborder="0" allowfullscreen></iframe>
