--- a/src/app/page/component/content-text/content-text.component.html
+++ b/src/app/page/component/content-text/content-text.component.html
@@ -6,6 +6,7 @@
       firstContent: isFirstPage$ | async
     }"
     [ngStyle]="styles"
+    [style.visibility]="isInvisible ? 'hidden' : 'visible'"
     dir="{{ dir$ | async }}"
   >
     <img
