--- a/src/app/page/component/content-paragraph/content-paragraph.component.html
+++ b/src/app/page/component/content-paragraph/content-paragraph.component.html
@@ -1,3 +1,5 @@
 <ng-container *ngIf="ready && !isHidden && items && items.length">
-  <app-content-repeater [items]="items"></app-content-repeater>
+  <div [style.visibility]="isInvisible ? 'hidden' : 'visible'">
+    <app-content-repeater [items]="items"></app-content-repeater>
+  </div>
 </ng-container>
