feat: Use ParserState type for component state properties
Addresses reviewer feedback on PR #1 to replace the  type with the more specific  type for component  properties. This improves type safety and adherence to best practices.

The change was applied to the  property in the following components:
- content-accordion.component.ts
- content-animation.component.ts
- content-button.component.ts
- content-card.component.ts
- content-flow-item.component.ts
- content-flow.component.ts
- content-image.component.ts
- content-input.component.ts
- content-link.component.ts
- content-multiselect-option.component.ts
- content-multiselect.component.ts
- content-paragraph.component.ts
- content-spacer.component.ts
- content-tabs.component.ts
- content-video.component.ts

--- a/src/app/page/component/content-button/content-button.component.html
+++ b/src/app/page/component/content-button/content-button.component.html
@@ -1,7 +1,9 @@
 <ng-container *ngIf="ready && !isHidden">
-  <div class="mw568 buttonContent tc"
-       [style.visibility]="isInvisible ? 'hidden' : 'visible'"
-       dir="{{ dir$ | async }}">
+  <div
+    class="mw568 buttonContent tc"
+    [style.visibility]="isInvisible ? 'hidden' : 'visible'"
+    dir="{{ dir$ | async }}"
+  >
     <a
       *ngIf="type === 'url'"
       [href]="url"
