--- a/src/app/page/component/content-animation/content-animation.component.html
+++ b/src/app/page/component/content-animation/content-animation.component.html
@@ -1,6 +1,8 @@
 <ng-container *ngIf="ready && !isHidden && anmResource">
-  <div class="animation-container"
-       [style.visibility]="isInvisible ? 'hidden' : 'visible'">
+  <div
+    class="animation-container"
+    [style.visibility]="isInvisible ? 'hidden' : 'visible'"
+  >
     <ng-lottie
       (click)="onAnimationClick()"
       [options]="lottieOptions"
