--- a/src/app/page/component/content-video/content-video.component.html
+++ b/src/app/page/component/content-video/content-video.component.html
@@ -1,7 +1,9 @@
 <ng-container *ngIf="ready && !isHidden">
   <!-- YouTube Video Embed -->
-  <div class="video-embed"
-       [style.visibility]="isInvisible ? 'hidden' : 'visible'">
+  <div
+    class="video-embed"
+    [style.visibility]="isInvisible ? 'hidden' : 'visible'"
+  >
     <iframe [src]="videoUrl" frameborder="0" allowfullscreen></iframe>
   </div>
   <!-- YouTube Video Embed -->
